WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183338
Follow-up fixes after
r228907
.
https://bugs.webkit.org/show_bug.cgi?id=183338
Summary
Follow-up fixes after r228907.
Per Arne Vollan
Reported
2018-03-05 10:35:16 PST
There are review comments on the patch in
https://bugs.webkit.org/show_bug.cgi?id=182855
which have not been addressed yet. This bug will track this.
Attachments
Patch
(5.23 KB, patch)
2018-05-25 16:24 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-03-05 10:35:37 PST
<
rdar://problem/38144878
>
Tim Horton
Comment 2
2018-05-24 23:46:06 PDT
We really ought to fix the extra message at process initialization part, it’s very strange (I just ran into it looking at another bug).
Per Arne Vollan
Comment 3
2018-05-25 07:42:17 PDT
(In reply to Tim Horton from
comment #2
)
> We really ought to fix the extra message at process initialization part, > it’s very strange (I just ran into it looking at another bug).
I am aiming to look into this bug today.
Per Arne Vollan
Comment 4
2018-05-25 16:24:40 PDT
Created
attachment 341350
[details]
Patch
Brent Fulgham
Comment 5
2018-05-25 17:05:50 PDT
Comment on
attachment 341350
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=341350&action=review
I think this change to the launch code might fix a bug David and I have been trying to track down! r=me, but please make sure EWS is happy before landing.
> Source/WebKit/Shared/WebProcessCreationParameters.h:199 > + HashMap<WebCore::PlatformDisplayID, WebCore::ScreenProperties> screenPropertiesMap;
We use HashMap<WebCore::PlatformDisplayID, WebCore::ScreenProperties> a lot in PlatformScreen. I wonder if we should define a type for this to keep things tidy?
Per Arne Vollan
Comment 6
2018-05-29 09:23:13 PDT
(In reply to Brent Fulgham from
comment #5
)
> Comment on
attachment 341350
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=341350&action=review
> > I think this change to the launch code might fix a bug David and I have been > trying to track down! r=me, but please make sure EWS is happy before landing. > > > Source/WebKit/Shared/WebProcessCreationParameters.h:199 > > + HashMap<WebCore::PlatformDisplayID, WebCore::ScreenProperties> screenPropertiesMap; > > We use HashMap<WebCore::PlatformDisplayID, WebCore::ScreenProperties> a lot > in PlatformScreen. I wonder if we should define a type for this to keep > things tidy?
That's a good idea, I can look into that in a new patch :) Thanks for reviewing!
WebKit Commit Bot
Comment 7
2018-05-29 09:50:18 PDT
Comment on
attachment 341350
[details]
Patch Clearing flags on attachment: 341350 Committed
r232260
: <
https://trac.webkit.org/changeset/232260
>
WebKit Commit Bot
Comment 8
2018-05-29 09:50:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug